fix(tooltip): bottom center tooltip was misaligned
A bottom center tooltip had it's arrow misaligned and not correctly centered

--- a/src/definitions/modules/popup.less
+++ b/src/definitions/modules/popup.less
@@ -336,7 +336,8 @@
           top: 100%;
           left: 50%;
           margin-left: @tooltipArrowHorizontalOffset;
-          margin-top: -@tooltipArrowVerticalOffset;
+          margin-top: -@arrowOffset;
+          transform-origin: center top;
         }
       }
       & when (@variationPopupLeft) {
